src/test/ui/consts/const-eval/issue-52442.stderr
error[E0658]: `loop` is not allowed in a `const`
  --> $DIR/issue-52442.rs:2:14
   |
LL |     [();  { &loop { break } as *const _ as usize } ];
   |              ^^^^^^^^^^^^^^
   |
   = note: see issue #52000 <https://github.com/rust-lang/rust/issues/52000> for more information
   = help: add `#![feature(const_loop)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
